--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -232,6 +232,11 @@ body {
   text-align: center;
   font-weight: var(--font-semi);
   padding: 2rem 0;
+  
+}
+
+a:link, a:visited, a:active {
+  text-decoration:none;
 }
 
 .footer__title {
